--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body class="max-w-[1440px] font-lexend">
-    <header>
+    <header class="sticky top-0">
         <nav class="flex justify-between items-center p-12 mx-auto bg-stone-100">
             <button class="text-lg font-semibold bg-primary p-3 w-1/12 rounded-lg text-textColor">Blog</button>
             <div class="flex justify-center items-center gap-4">
