--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
 <body class="max-w-[1440px] font-lexend">
     <header  class="sticky top-0 bg-stone-100">
-        <nav class="flex justify-between items-center p-12 mx-auto">
-            <button id="blog" class="text-lg font-semibold bg-primary p-3 w-1/12 rounded-lg text-textColor">Blog</button>
+        <nav class="flex flex-col gap-4 lg:flex-row justify-between items-center p-12 mx-auto">
+            <button id="blog" class="text-lg font-semibold bg-primary p-3 lg:w-1/12 rounded-lg text-textColor">Blog</button>
             <div class="flex justify-center items-center gap-4">
                 <img src="./assets/logo.png" alt="">
                 <p class="text-lg font-semibold text-textColor">Donate Bangladesh</p>
