updated donation button and home button

--- a/faq.html
+++ b/faq.html
@@ -38,8 +38,8 @@
 </head>
 
 <body class="font-lexend">
-    <nav class="flex justify-between items-center p-12 mx-auto bg-stone-100">
-        <button class="text-lg font-semibold bg-primary p-3 w-1/12 rounded-lg text-textColor">Blog</button>
+    <nav class="flex flex-col gap-4 lg:flex-row justify-between items-center p-12 mx-auto bg-stone-100">
+        <button id="backHome" class="text-lg font-semibold bg-primary p-3 lg:w-1/12 rounded-lg text-textColor"><a href="/">Home</a></button>
         <div class="flex justify-center items-center gap-4">
             <img src="./assets/logo.png" alt="">
             <p class="text-lg font-semibold text-textColor">Donate Bangladesh</p>
