--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header class="sticky top-0  bg-violet-50">
         <nav class="flex flex-col gap-4 lg:flex-row justify-between items-center p-10 mx-auto">
             <button id="blog"
-                class="text-lg font-semibold bg-primary p-3 lg:w-1/12 rounded-lg text-textColor">Blog</button>
+                class="text-lg font-semibold bg-primary p-3 lg:w-1/12 rounded-lg text-textColor"><a href="./faq.html">Blog</a></button>
             <div class="flex justify-center items-center gap-4">
                 <img src="./assets/logo.png" alt="">
                 <p class="text-lg font-semibold text-textColor">Donate Bangladesh</p>
@@ -197,13 +197,8 @@
         </div>
     </main>
     <script src="./js/app.js"></script>
-    <script src="./js/faq.js"></script>
     <script src="./js/button.js"></script>
-    <script src="./js/noakhali.js"></script>
-    <script src="./js/feni.js"></script>
-    <script src="./js/comilla.js"></script>
-    <script src="./js/quota-1.js"></script>
-    <script src="./js/quota-2.js"></script>
+    <script src="./js/donation.js"></script>
 </body>
 
 </html>
