--- a/faq.html
+++ b/faq.html
@@ -39,7 +39,9 @@
 
 <body class="font-lexend">
     <nav class="flex flex-col gap-4 lg:flex-row justify-between items-center p-12 mx-auto bg-stone-100">
-        <button id="backHome" class="text-lg font-semibold bg-primary p-3 lg:w-1/12 rounded-lg text-textColor"><a href="/">Home</a></button>
+        <a href="/">
+            <button class="text-lg font-semibold bg-primary p-3 lg:w-1/12 rounded-lg text-textColor">Home</button>
+        </a>
         <div class="flex justify-center items-center gap-4">
             <img src="./assets/logo.png" alt="">
             <p class="text-lg font-semibold text-textColor">Donate Bangladesh</p>
@@ -52,36 +54,42 @@
     </nav>
 
     <main class="mt-10">
-       <section class="w-11/12 mx-auto">
-        <h1 class="text-5xl font-semibold mb-12">Important FAQ <i class="fa-regular fa-circle-question"></i></h1>
-        <div class="collapse collapse-arrow bg-base-100">
-            <input type="radio" name="my-accordion-2" checked="checked" />
-            <div class="collapse-title text-xl font-medium">What is the document model(DOM)?</div>
-            <div class="collapse-content">
-              <p>The Document Object Model (DOM) is a programming API for HTML and XML documents. It defines the logical structure of documents and the way a document is accessed and manipulated.</p>
+        <section class="w-11/12 mx-auto">
+            <h1 class="text-5xl font-semibold mb-12">Important FAQ <i class="fa-regular fa-circle-question"></i></h1>
+            <div class="collapse collapse-arrow bg-base-100">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">What is the document model(DOM)?</div>
+                <div class="collapse-content">
+                    <p>The Document Object Model (DOM) is a programming API for HTML and XML documents. It defines the
+                        logical structure of documents and the way a document is accessed and manipulated.</p>
+                </div>
             </div>
-          </div>
-          <div class="collapse collapse-arrow bg-base-100">
-            <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
-            <div class="collapse-content">
-              <p>The selectors API provides methods that quick and easy to retrieve element nodes from the DOM by matching against a set of selectors.</p>
+            <div class="collapse collapse-arrow bg-base-100">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
+                <div class="collapse-content">
+                    <p>The selectors API provides methods that quick and easy to retrieve element nodes from the DOM by
+                        matching against a set of selectors.</p>
+                </div>
             </div>
-          </div>
-          <div class="collapse collapse-arrow bg-base-100">
-            <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">What id event deligation in the context of the Dom, and why is it usefull?</div>
-            <div class="collapse-content">
-              <p>Event delegation refers to the process of using event propagation (bubbling) to handle events at a higher level in the DOM than the element on which the event originated. </p>
-            </div>
-          <div class="collapse collapse-arrow bg-base-100">
-            <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">How do you manipulate an elements attributes and styles using the DOM?</div>
-            <div class="collapse-content">
-              <p>The classlist object only provide methods to change the class of an element. If you want to change other attributes like id, href, or src can use the setAttribute() method.</p>
-            </div>
-          </div>
-       </section>
+            <div class="collapse collapse-arrow bg-base-100">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">What id event deligation in the context of the Dom, and
+                    why is it usefull?</div>
+                <div class="collapse-content">
+                    <p>Event delegation refers to the process of using event propagation (bubbling) to handle events at
+                        a higher level in the DOM than the element on which the event originated. </p>
+                </div>
+                <div class="collapse collapse-arrow bg-base-100">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="collapse-title text-xl font-medium">How do you manipulate an elements attributes and
+                        styles using the DOM?</div>
+                    <div class="collapse-content">
+                        <p>The classlist object only provide methods to change the class of an element. If you want to
+                            change other attributes like id, href, or src can use the setAttribute() method.</p>
+                    </div>
+                </div>
+        </section>
     </main>
 </body>
 
