--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 <body class="max-w-[1440px] font-lexend">
     <header class="sticky top-0  bg-violet-50">
         <nav class="flex flex-col gap-4 lg:flex-row justify-between items-center p-10 mx-auto">
-            <button id="blog"
-                class="text-lg font-semibold bg-primary p-3 lg:w-1/12 rounded-lg text-textColor"><a href="./faq.html">Blog</a></button>
+            <a href="./faq.html">
+                <button class="text-lg font-semibold bg-primary p-3 lg:w-1/12 rounded-lg text-textColor">Blog</button>
+            </a>
             <div class="flex justify-center items-center gap-4">
                 <img src="./assets/logo.png" alt="">
                 <p class="text-lg font-semibold text-textColor">Donate Bangladesh</p>
