--- a/faq.html
+++ b/faq.html
@@ -40,7 +40,7 @@
 <body class="font-lexend">
     <nav class="flex flex-col gap-4 lg:flex-row justify-between items-center p-12 mx-auto bg-stone-100">
         <a href="/">
-            <button class="text-lg font-semibold bg-primary p-3 lg:w-1/12 rounded-lg text-textColor">Home</button>
+            <button class="text-lg font-semibold bg-primary py-3 px-5 rounded-lg text-textColor">Home</button>
         </a>
         <div class="flex justify-center items-center gap-4">
             <img src="./assets/logo.png" alt="">
