--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header class="sticky top-0  bg-violet-50">
         <nav class="flex flex-col gap-4 lg:flex-row justify-between items-center p-10 mx-auto">
             <a href="./faq.html">
-                <button class="text-lg font-semibold bg-primary p-3 lg:w-1/12 rounded-lg text-textColor">Blog</button>
+                <button class="text-lg font-semibold bg-primary py-3 px-5  rounded-lg text-textColor">Blog</button>
             </a>
             <div class="flex justify-center items-center gap-4">
                 <img src="./assets/logo.png" alt="">
