--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body class="max-w-[1440px] font-lexend">
-    <header class="sticky top-0  bg-violet-50">
+    <header class="sticky top-0 backdrop-filter backdrop-blur-sm bg-opacity-75 bg-violet-50">
         <nav class="flex flex-col gap-4 lg:flex-row justify-between items-center p-10 mx-auto">
             <a href="./faq.html">
                 <button class="text-lg font-semibold bg-primary py-3 px-5  rounded-lg text-textColor">Blog</button>
