updated font size

--- a/faq.html
+++ b/faq.html
@@ -55,7 +55,7 @@
 
     <main class="mt-10">
         <section class="w-11/12 mx-auto">
-            <h1 class="text-5xl font-semibold mb-12">Important FAQ <i class="fa-regular fa-circle-question"></i></h1>
+            <h1 class="text-2xl lg:text-5xl font-semibold mb-12">Important FAQ <i class="fa-regular fa-circle-question"></i></h1>
             <div class="collapse collapse-arrow bg-base-100">
                 <input type="radio" name="my-accordion-2" checked="checked" />
                 <div class="collapse-title text-xl font-medium">What is the document model(DOM)?</div>
