fixed balance related logic

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="flex justify-center items-center gap-2">
                 <img src="./assets/coin.png" alt="">
-                <p id="main-balance" class="text-lg font-semibold text-textColor">65000</p>
+                <p id="main-balance" class="text-lg font-semibold text-textColor"></p>
                 <p class="text-lg font-semibold text-textColor">BDT</p>
             </div>
         </nav>
